started exercise 4 from sheet 3

--- a/formulary/formulary.tex
+++ b/formulary/formulary.tex
@@ -66,6 +66,10 @@ Möchte Divergenz zeigen, also $P(A)>0$ für $A=\{\omega\in\Omega\mid\forall c\i
 Sei $\omega\in\Omega$ und $c\in\mathbb{R}$ gegeben, wähle $N$ so, dass $k_N>c$ und $\frac{m_n}{2^{k_n}}\leq\omega\leq\frac{m_n+1}{2^{k_n}}$.
 Dann gilt $X_n(\omega)>c$, also $\omega\in A$.
 Da $\omega$ beliebig war, gilt $A=\Omega$ und $P(X_n$ konvergiert nicht $)=1$.
+
+Sei $P(X_n=\sqrt{n})=\frac{1}{n}=1-P(X_n=0)$.
+Untersuchen Sie die Folge auf stochastische, $P$-fast-sichere und $L^p$-Konvergenz und auf gleichgradige Integrierbarkeit.
+
 \bibliography{../../../books/wt}
 \end{document}
 
