--- a/formulary/formulary.tex
+++ b/formulary/formulary.tex
@@ -25,10 +25,7 @@
 
 \paragraph{Verschiedene Konvergenzarten}
 Wir betrachten den Wahrscheinlichkeitsraum $([0,1],{\cal B}([0,1]),P)$, wobei $P$ das Lebesgue-Maß $\lambda$ eingeschränkt auf $[0,1]$ sei.
-Wir betrachten die Folge von Zufallsvariablen
-\[
-  X_1\equiv0,~X_n=\sqrt{n}\mathbbm{1}_{(\frac{1}{n},\frac{2}{n})}\,.
-\]
+Wir betrachten die Folge von Zufallsvariablen $X_1\equiv0,~X_n=\sqrt{n}\mathbbm{1}_{(\frac{1}{n},\frac{2}{n})}$.
 Untersuchen Sie diese auf 1. stochastische Konvergenz, 2. $P$-fast-sichere Konvergenz, 3. $L^2$-Konvergenz und 4. gleichgradige  Integrierbarkeit.
 
 1, 4. Wir prüfen $L^1$-Konvergenz.
@@ -68,8 +65,65 @@ Dann gilt $X_n(\omega)>c$, also $\omega\in A$.
 Da $\omega$ beliebig war, gilt $A=\Omega$ und $P(X_n$ konvergiert nicht $)=1$.
 
 Sei $P(X_n=\sqrt{n})=\frac{1}{n}=1-P(X_n=0)$.
-Untersuchen Sie die Folge auf stochastische, $P$-fast-sichere und $L^p$-Konvergenz und auf gleichgradige Integrierbarkeit.
+Untersuchen Sie die Folge auf 1. stochastische, 2. $P$-fast-sichere und 3. $L^p$-Konvergenz und auf 4. gleichgradige Integrierbarkeit.
+1. Wenn $X_n>\varepsilon$, dann ist $P(X_n=\sqrt{n})=\frac{1}{n}\to0$, also ja.
+2. Nein. $(\{X_n\geq1\})_n$ sind unabhängig. Kann Borel-Cantelli anwenden. $\sum P(X_n\geq 1)=\sum\frac{1}{n}=\infty$, sodass $1=P(\limsup\{X_n\geq1\})=P(X_n\geq1$ für unendlich viele $n)$.
+Das heißt, existiert Teilfolge für $P$ fast alle $\omega$ $X_{n_k}(\omega)=\sqrt{n_k}$.
+$\limsup X_n(\omega)\geq\lim\sqrt{n_k}=\infty$.
+Also $1=P(\limsup X_n\geq1)$, sodass $P(X_n\to0)=0$.
+3. $E[|X|^p]=(\sqrt{n})^p\frac{1}{n}=n^{p/2-1}$, also $L^p$-Konvergenz wenn $p<2$.
+4. GGIB, da $L^1$-Konvergenz nach Vitali.
 
+\paragraph{Einfache Aufgaben}
+Sei $(\Omega,{\cal F},P)=([0,1],{\cal B}([0,1]),\lambda|_{[0,1]})$, wobei $\lambda|_{[0,1]}$ das Lebesgue-Maß auf $[0,1]$ bezeichnet.
+Dann haben $X_1$ und $X_2$ mit $X_1(\omega)=\omega$ und $X_2(\omega)=1-\omega$ die gleiche Verteilung.
+
+$[a,b]$ erzeugen ${\cal B}([0,1])$, also reicht zu prüfen $\lambda\circ X_1^{-1}([a,b])=b-a$, $\lambda\circ X_2^{-1}([a,b])=\lambda([1-b,1-a])=b-a$.
+
+Sei $(\Omega,{\cal F})=([0,1],{\cal B}([0,1]))$.
+Es gibt ein Wahrscheinlichkeitsmaß $P$, sodass $X_1(\omega)=\omega$ und $X_2(\omega)=1-\omega$ nicht die gleiche Verteilung haben.
+$\delta_0$, denn $\delta_0\circ X_1^{-1}(\{0\})=1$, aber $\delta_0\circ X_2^{-1}(\{0\})=0$.
+
+Sei $X\sim{\cal N}(2,2)$. Dann gilt, dass $P[|X-2|\geq2]\leq\frac{1}{2}$.
+Ja, Tschebyscheff $P(|X-E[x]|>\varepsilon)\leq\frac{\operatorname{Var}(x)}{\varepsilon^2}$.
+Jede reellwertige Zufallsvariable hat Dichte bezüglich Lebesgue-Maß (also $X_\star P=f\cdot\lambda$)
+Radon-Nikodym: $\nu$ Dichte bezüglich $\mu$ genau dann wenn $\nu\ll \mu$.
+Sei $X=0$.
+Dann ist $X$ stetig und somit messbar mit $P(X=0)=1$, also $X_\star P=\delta_0$.
+Da $0=\lambda(\{0\})\neq\delta_0(\{0\})=1$, ist $\delta_0$ nicht absolut stetig bezüglich $\lambda$.
+Nach dem Satz von Radon-Nikodym besitzt dann $\delta_0$ keine Dichte bezüglich des Lebesgue-Maßes.
+
+Alle Abbildungen $f\colon (\Omega,{\cal P}(\Omega))\to(\mathbb{R},{\cal B}(\mathbb{R}))$ sind messbar.
+Ja.
+Sei $A\in{\cal B}(\mathbb{R})$, dann ist $f^{-1}(A)\in{\cal P}(\Omega)$, denn in ${\cal P}(\Omega)$ sind alle Mengen, die nach $A$ abbilden könnten, drin.
+
+Für $X\sim{\cal N}(0,1)$ und $Y\sim{\cal N}(0,2)$ gilt $E[XY]\leq\sqrt{2}$?
+Ja, denn nach der Cauchy--Schwarz-Ungleichung, also der Hölder-Ungleichung mit $r=1$ und $p=q=2$ gilt
+$E[XY]
+\leq\|X\|_2\|Y\|_2
+=\sqrt{E[X^2]}\sqrt{E[Y^2]}
+=\sqrt{E[(X-E[X])^2]}\sqrt{E[(Y-E[Y])^2]}
+=\sqrt{\operatorname{Var}(X)}\sqrt{\operatorname{Var}(Y)}
+=\sqrt{2}$.
+
+Eine $\mathbb{N}$-wertige Zufallsvariable ist zu sich selbst unabhängig, wenn sie fast sicher konstant ist.
+Wenn $X$ zu sich selbst unabhängig ist, gilt $P(X=k)=P(\{X=k\}\cap\{X=k\})=P(X=k)^2$, also $P(X=k)\in\{0,1\}$.
+Das heißt, nur für ein $k_0\in\mathbb{N}$ ist $P(X=k_0)=1$, also ist $X$ konstant.
+Umgekehrt sei $P(X=k_0)=1$, dann ist $P(\{X\in A\}\cap\{X\in B\})=\mathbbm{1}_{A\cap B}(k_0)=\mathbbm{1}_{A}(k_0)\mathbbm{1}_{B}(k_0)=P(X\in A)P(X\in B)$.
+
+$X=\mathbbm{1}_A$ und $Y=\mathbbm{1}_B$.
+$E[XY]=E[X]E[Y]\iff A\perp B$.
+Ja, $E[XY]=P[A\cap B]=P(A)P(B)=E[X]E[Y]$ oder $P(A\cap B)=E[XY]=E[X]E[Y]=P(A)P(B)$.
+
+$E[X^4]\geq E[X]^4$ gilt nach Jensen-Ungleichung, da $x^4$ konvex.
+
+Auf $(\omega,\{\Omega,\emptyset\})$ gibt es keine Borel-messbare Abbildung?
+Doch.
+Sei $f=0$, dann für $A\in{\cal B}(\mathbb{R})$ gilt $f^{-1}(A)=\emptyset$, falls $0\notin A$, beziehungsweise $f^{-1}(A)=\Omega,$ falls $0\in A$.
+
+Sei $X$ exponentialverteilt mit $\lambda=6$ und $Y$ mit $\lambda=1/3$. Dann ist nach Cauchy-Schwarz $E[XY]\leq E[X^2]^{1/2}E[Y^2]^{1/2}=\frac{2}{\lambda_X^2}\frac{2}{\lambda_Y^2}=1$.
+
+$X\in L^p\Rightarrow X\in L^q$ für $q\leq p$, da $\|X\|_q=\|1\cdot X\|_q\leq\|X\|_p\|1\|_r$ mit $r$ so, dass $\frac{1}{q}=\frac{1}{p}+\frac{1}{r}$.
 \bibliography{../../../books/wt}
 \end{document}
 
