Small change in formulary

--- a/formulary/formulary.tex
+++ b/formulary/formulary.tex
@@ -63,6 +63,7 @@ Möchte Divergenz zeigen, also $P(A)>0$ für $A=\{\omega\in\Omega\mid\forall c\i
 Sei $\omega\in\Omega$ und $c\in\mathbb{R}$ gegeben, wähle $N$ so, dass $k_N>c$ und $\frac{m_n}{2^{k_n}}\leq\omega\leq\frac{m_n+1}{2^{k_n}}$.
 Dann gilt $X_n(\omega)>c$, also $\omega\in A$.
 Da $\omega$ beliebig war, gilt $A=\Omega$ und $P(X_n$ konvergiert nicht $)=1$.
+Oder auch es gibt TF $X_{n_l}$ so dass $\omega\in[\frac{m_{n_l}}{2^{k_n_l}}..]$, d.h. $\limsup\geq1$ und somit $\lim\neq0$.
 
 Sei $P(X_n=\sqrt{n})=\frac{1}{n}=1-P(X_n=0)$.
 Untersuchen Sie die Folge auf 1. stochastische, 2. $P$-fast-sichere und 3. $L^p$-Konvergenz und auf 4. gleichgradige Integrierbarkeit.
