Added some hints for sheet 12

--- a/homeworks/12/sol/12.tex
+++ b/homeworks/12/sol/12.tex
@@ -58,6 +58,10 @@ Mit der definierenden Eigenschaft (ii) vom bedingten Erwartungswert ausgewertet 
   &=E[M_n^2-M_m^2]\,.
 \end{align*}
 \newpage
+
+% Für Aufgabe 2
+% https://math.stackexchange.com/questions/3965911/prove-that-mathcal-f-tau-is-a-sigma-algebra
+
 \paragraph{Aufgabe 3.}
 %https://math.stackexchange.com/questions/2029863/central-limit-theorem-and-convergence-in-probability-from-durrett
 Seien $X_1,X_2,\dots$ i.i.d. Zufallsvariablen mit $E[X_1]=0$ und $0<E[X_1^2]<\infty$.
@@ -96,6 +100,9 @@ Mit Stetigkeit von oben folgt, dass
 \end{align*}
 Damit muss $P\bigl(\limsup_{n\to\infty}\frac{S_n}{\sqrt{n}}=\infty\bigr)=1$ gelten.
 \emph{Wahrscheinlich muss hier irgendwo noch entsprechend Hinweis mit dem Lemma von Fatou argumentiert werden.}
+
+\paragraph{Aufgabe 4.}
+% https://johnthickstun.com/docs/coinflip.pdf
 \bibliography{../../../books/wt}
 \end{document}
 
