initial commit sheet 0 and 1 of stochastic processes

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,11 @@
+@book{durrett,
+title =     {Probability: Theory and Examples},
+author =    {Rick Durrett},
+publisher = {Cambridge University Press},
+isbn =      {9781108473682; 1108473687},
+year =      {2019},
+series =    {Cambridge Series in Statistical and Probabilistic Mathematics},
+edition =   {5}}
 @MISC {4438264,
 TITLE = {Compute explicitly Lévy–Prokhorov metric for $2$ finite Dirac measures},
 AUTHOR = {Analyst},
